// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note Input > should render correctly 1`] = `
<form
  class="note-input"
>
  <textarea
    class="note-input__input"
    data-clarity-mask="True"
    maxlength="1024"
    placeholder="Add your note..."
  />
  <div
    class="emoji-suggestions emoji-suggestions__container emoji-suggestions__container--empty"
    style="--top-distance: 0px;"
  >
    <ul
      class="emoji-suggestions__list"
    />
  </div>
  <button
    aria-label="Create note"
    class="note-input__add-button"
    tabindex="-1"
    title="Create note"
    type="submit"
  >
    <svg
      class="note-input__icon--add"
      fill="none"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M24 16L8 16"
        stroke="currentColor"
        stroke-width="1.75"
      />
      <path
        d="M16 8L16 24"
        stroke="currentColor"
        stroke-width="1.75"
      />
    </svg>
  </button>
</form>
`;

exports[`Note Input should render correctly 1`] = `
<form
  class="note-input"
>
  <textarea
    class="note-input__input"
    data-clarity-mask="True"
    maxlength="1024"
    placeholder="Add your note..."
  />
  <div
    class="emoji-suggestions emoji-suggestions__container emoji-suggestions__container--empty"
    style="--top-distance: 0px;"
  >
    <ul
      class="emoji-suggestions__list"
    />
  </div>
  <button
    aria-label="Create note"
    class="note-input__add-button"
    tabindex="-1"
    title="Create note"
    type="submit"
  >
    <svg
      class="note-input__icon--add"
    >
      plus.svg
    </svg>
  </button>
</form>
`;
